--- a/MyCoolWebServer-master/MyCoolWebServer/ByTheCakeApplication/Resourses/Cakes/search.html
+++ b/MyCoolWebServer-master/MyCoolWebServer/ByTheCakeApplication/Resourses/Cakes/search.html
@@ -12,6 +12,7 @@
         <input type="submit" value="Search Cake" />
     </form>
     <br />
+    <div>Your card {{{products}}}</div>
     {{{cakes}}}
     <footer style="text-align: center">
         <h5>&copy; All Rights Reserved</h5>
