--- a/GameStore/MyCoolWebServer/GameStoreApplication/Resources/Account/login.html
+++ b/GameStore/MyCoolWebServer/GameStoreApplication/Resources/Account/login.html
@@ -1,77 +1,24 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Game Store</title>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-</head>
-<body>
-
-<header>
-    <nav class="navbar navbar-expand-md navbar-light bg-warning">
-        <div class="container">
-            <a class="navbar-brand" href="#">SoftUni Store</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Cart</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Register</a>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-    </nav>
-</header>
-
-<main class="col-4 ml-auto mr-auto text-center">
+﻿<main class="col-4 ml-auto mr-auto text-center">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="text-center"><h1 class="display-3">Login</h1></div>
-                <br/>
-                <form>
+                <br />
+                <form method="post">
                     <div class="form-group row">
-                        <label class="sr-only">Email</label>
-                        <input name="email" class="form-control" placeholder="somebody@example.com"/>
+                        <label class="sr-only">E-mail</label>
+                        <input name="email" class="form-control" placeholder="somebody@example.com" />
                     </div>
                     <div class="form-group row">
                         <label class="sr-only">Password</label>
-                        <input name="password" class="form-control" placeholder="Password"/>
+                        <input type="password" name="password" class="form-control" placeholder="Password" />
                     </div>
 
-                    <input type="submit" class="btn btn-outline-warning btn-lg btn-block"
-                           value="Login"/>
+                    <input type="submit" class="btn btn-outline-success btn-lg btn-block"
+                           value="Login" />
                 </form>
-                <br/>
+                <br />
             </div>
         </div>
     </div>
 </main>
-<br/>
-
-<!--Footer-->
-<footer>
-    <div class="container modal-footer">
-        <p>&copy; 2017 - Software University Foundation</p>
-    </div>
-</footer>
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-</body>
-</html>
